# agent-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: jobs.py
app/models/: __init__.py  enums.py  job.py  task.py
app/services/: __init__.py  job_processor.py  mcp_client.py  orchestrator.py  rai.py  worker.py
app/storage/: __init__.py  job_store.py  task_store.py
docs/: api.md  architecture.md  config_and_main.md  mcp_server.md  models.md  mvp_roadmap.md  quickstart.md  rai_service.md  services.md  storage.md  workflow_diagrams.md
mcp_server/: __init__.py  main.py
